k8s-manifests/overlays/qa/superapp/client/saving/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: equb-route
spec:
  path: /api/v1/cbesuperapp/cbe_to_wallet
  to:
    name: equb-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: budget-route
spec:
  path: /api/v1/cbesuperapp/budget
  to:
    name: budget-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-route
spec:
  path: /api/v1/cbesuperapp/vault
  to:
    name: vault-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
